test/reusable/error/lex.bfr
main {
  a: cell;
} [
  + a あいうえお
]